--- a/README.rdoc
+++ b/README.rdoc
@@ -31,7 +31,7 @@ If you haven't added gemcutter yet:
 
 (The MIT License)
 
-Copyright (c) 2009 FIXME full name
+Copyright (c) 2009 Christian Felder (masone)
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
